unir en una funcion

--- a/index.html
+++ b/index.html
@@ -1,40 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Primer proyecto javascript</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div class="cuerpo">
-    <div class="contenedor">
-        <h1>Carrito de compra</h1>
-        <img src="Borchali_rug.png">
-        <h6>Alfombra Borchali</h6>
-        <input>
-        <br>
-        <label>Color</label>
+
+<head>
+    <title>Primer proyecto javascript</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="cuerpo">
+        <div class="contenedor">
+            <h1>Carrito de compra</h1>
+            <img src="Borchali_rug.png">
+            <h6>Alfombra Borchali</h6>
+            <input id="primer">
+            <br>
+            <label>Color</label>
             <select>
-              <option value="#7c0a02">Rojo</option>
-              <option value="#b0bf1a">Verde</option>
-              <option value="#0026ca">Azul</option>
+                <option value="#7c0a02">Rojo</option>
+                <option value="#b0bf1a">Verde</option>
+                <option value="#0026ca">Azul</option>
             </select>
-        <p>Precio: $60.000</p>
-        <button>Calcular total</button>
-    </div>
-    <div>
-        <p>Total:</p><span></span>
-        <p>Cantidad:</p><span></span>
-        <p class="color">Color:</p><div id="colorEleccion"></div>
-    </div>
+            <p>Precio:
+            <section id="segundo">60000</section>
+            </p>
+            <button>Calcular total</button>
         </div>
-    </body>
-    <script>
-     btn = document.querySelector("button");   
-     btn.addEventListener("click", () => {
-              colorSelect = document.querySelector("select");
-              color = colorSelect.value;
-      
-              forma = document.querySelector("#colorEleccion");
-              forma.style.background = color;})
-    </script>
+        <div>
+            <h3>Total:<span id="resultado"></span></h3>
+            <p>Cantidad:</p><span></span>
+            <p class="color">Color:</p>
+            <div id="colorEleccion"></div>
+        </div>
+    </div>
+</body>
+<script>
+ //Cambio de color
+ btn = document.querySelector("button");
+    btn.addEventListener("click", () => {
+        colorSelect = document.querySelector("select");
+        color = colorSelect.value;
+
+        forma = document.querySelector("#colorEleccion");
+        forma.style.background = color;
+//
+        primerNumeroInput = document.querySelector("#primer");
+        primerNumero = primerNumeroInput.value;
+
+        resultado = Number(primerNumero) * 60000;
+
+        resultadoSpan = document.querySelector("#resultado");
+        resultadoSpan.innerHTML = resultado;
+    });
+
+    //suma de carrito                             
+</script>
+
 </html>
